--- a/app/src/main/res/menu/keymap_editor_menu.xml
+++ b/app/src/main/res/menu/keymap_editor_menu.xml
@@ -3,30 +3,37 @@
     <item
         android:id="@+id/dpad"
         android:icon="@drawable/dpad"
-        android:title="@string/d_pad" />
+        android:title="@string/d_pad"
+        android:contentDescription="@string/d_pad" />
     <item
         android:id="@+id/crosshair"
         android:icon="@drawable/crosshair"
-        android:title="@string/crosshair" />
+        android:title="@string/crosshair"
+        android:contentDescription="@string/crosshair" />
     <item
         android:id="@+id/mouse_left"
         android:icon="@drawable/ic_baseline_mouse_36"
-        android:title="@string/left_click" />
+        android:title="@string/left_click"
+        android:contentDescription="@string/left_click" />
     <item
         android:id="@+id/mouse_right"
         android:icon="@drawable/ic_baseline_mouse_36"
-        android:title="@string/right_click" />
+        android:title="@string/right_click"
+        android:contentDescription="@string/right_click" />
     <item
         android:id="@+id/swipe_key"
         android:icon="@drawable/ic_baseline_touch_app_24"
-        android:title="@string/swipe_key" />
+        android:title="@string/swipe_key"
+        android:contentDescription="@string/swipe_key" />
     <item
         android:id="@+id/add"
         android:icon="@drawable/newkey"
-        android:title="@string/add_key" />
+        android:title="@string/add_key"
+        android:contentDescription="@string/add_key" />
 
     <item
         android:id="@+id/save"
         android:icon="@drawable/ic_baseline_done_36"
-        android:title="@string/save" />
+        android:title="@string/save"
+        android:contentDescription="@string/save" />
 </menu>
